# docs/swagger.yaml
@@ -92,6 +92,16 @@ definitions:
       message:
         type: string
     type: object
+  models.LoginModul:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
   models.PackedArticleModel:
     properties:
       author_id:
@@ -142,6 +152,11 @@ definitions:
     required:
     - firstname
     - lastname
+    type: object
+  models.TokenResponse:
+    properties:
+      token:
+        type: string
     type: object
   models.UpdateArticleModul:
     properties:
@@ -536,4 +551,75 @@ paths:
       summary: GetAuthorByID
       tags:
       - author
+  /v2/login:
+    post:
+      consumes:
+      - application/json
+      description: Login
+      parameters:
+      - description: Login body
+        in: body
+        name: users
+        required: true
+        schema:
+          $ref: '#/definitions/models.LoginModul'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.TokenResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.JSONErrorResponse'
+      summary: Login
+      tags:
+      - users
+  /v2/my-articles/:
+    get:
+      consumes:
+      - application/json
+      description: SearchArticleByMyUsername
+      parameters:
+      - description: "0"
+        in: query
+        name: offset
+        type: integer
+      - description: "100"
+        in: query
+        name: limit
+        type: integer
+      - default: ""
+        description: s
+        in: query
+        name: search
+        type: string
+      - description: Authorization
+        in: header
+        name: Authorization
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.JSONResult'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Article'
+                  type: array
+              type: object
+      summary: List articles
+      tags:
+      - article
 swagger: "2.0"
